patient record crud implemented

--- a/UIAngular/src/app/components/header/header.component.html
+++ b/UIAngular/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav ngxNavbarDynamicExpand class="navbar-light shadow p-3 mb-5 bg-white rounded">
-  <a class="navbar-brand" href="#">Cholpori Assessment</a>
+  <a class="navbar-brand" href="#">Patient Records</a>
   <button class="navbar-toggler" type="button" (click)="collapse.toggle()" aria-controls="main-nav"
     aria-expanded="false" aria-label="Navigáció kapcsoló">
     <span class="
@@ -13,7 +13,7 @@
   <ngx-navbar-collapse id="main-nav" #collapse="ngxNavbarCollapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/pages/task-list">Task <span class="sr-only"></span></a>
+        <a class="nav-link" routerLink="/pages/patient-records">Patient Records <span class="sr-only"></span></a>
       </li>
       <!-- <li class="nav-item">
         <a routerLink="/pages/task-list" routerLinkActive=""></a>
