--- a/UIAngular/src/app/components/footer/footer.component.html
+++ b/UIAngular/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="shadow p-3 bg-white rounded">
-  <h4 class="text-center">Footer Section</h4>
+  <h4 class="text-center">___________ ʕ•́ᴥ•̀ʔっ __________</h4>
 </div>
