--- a/UIAngular/src/app/components/pages/patient-records/patient-record-list/patient-record-list.component.html
+++ b/UIAngular/src/app/components/pages/patient-records/patient-record-list/patient-record-list.component.html
@@ -7,10 +7,15 @@
 
   <div class="row mt-2">
 
-    <div class="col-md-6 col-lg-6 col-sm-12 mb-2">
-      <chart-view></chart-view>
+    <div class="col-2 p-5 text-center mb-2">
+
     </div>
-    <div class="col-6 col-sm-12"></div>
+    <div class="col-8 p-5 text-center mb-2">
+      <canvas id="patientBarChart" class="chartjs-render-monitor"></canvas>
+    </div>
+    <div class="col-2 p-5 text-center mb-2">
+
+    </div>
 
     <div class="col-lg-4 col-sm-12">
       <div class="input-group">
@@ -45,7 +50,7 @@
 
   <div class="row">
     <div class="col-12">
-      <table class="table table-striped">
+      <table class="table table-hover table-striped">
         <thead>
           <tr>
 
@@ -80,7 +85,7 @@
               </div><span class="text-warning p-2">Loading...</span>
             </td>
           </tr>
-          <tr *ngFor="let item of patientRecordMdlLst">
+          <tr *ngFor="let item of patientRecordMdlLst" (click)="populateChartData(item.chartData)">
             <th scope="row">{{item.id}}</th>
             <td>
               {{ item.name }}
