--- a/UIAngular/src/app/components/pages/patient-records/patient-record-list/patient-record-list.component.html
+++ b/UIAngular/src/app/components/pages/patient-records/patient-record-list/patient-record-list.component.html
@@ -86,7 +86,7 @@
             </td>
           </tr>
           <tr *ngFor="let item of patientRecordMdlLst" (click)="populateChartData(item.chartData)">
-            <th scope="row">{{item.id}}</th>
+            <th scope="row">{{item.patientId}}</th>
             <td>
               {{ item.name }}
             </td>
