--- a/UIAngular/src/app/components/pages/patient-records/patient-record-list/patient-record-list.component.html
+++ b/UIAngular/src/app/components/pages/patient-records/patient-record-list/patient-record-list.component.html
@@ -11,6 +11,9 @@
 
     </div>
     <div class="col-8 p-5 text-center mb-2">
+      <div *ngIf="selectedPatient.patientId" class="row"><strong> Patient: {{selectedPatient.name}}, Id:
+          {{selectedPatient.patientId}}</strong>
+      </div>
       <canvas id="patientBarChart" class="chartjs-render-monitor"></canvas>
     </div>
     <div class="col-2 p-5 text-center mb-2">
@@ -85,14 +88,14 @@
               </div><span class="text-warning p-2">Loading...</span>
             </td>
           </tr>
-          <tr *ngFor="let item of patientRecordMdlLst" (click)="populateChartData(item.chartData)">
+          <tr *ngFor="let item of patientRecordMdlLst" (click)="getDioptres(item)">
             <th scope="row">{{item.patientId}}</th>
             <td>
               {{ item.name }}
             </td>
             <td>{{ item.phone }}</td>
             <td>
-              <p>
+              <p *ngIf="item.dioptres; else elseBlock">
                 <button type="button" *ngIf="item.dioptres >= 6" class="badge badge-danger text-danger">
                   {{  item.dioptres }} - High
                   Risk</button>
@@ -103,6 +106,9 @@
                 <button type="button" *ngIf="(item.dioptres >= 0 && item.dioptres < 1)"
                   class="badge badge-danger text-success"> {{  item.dioptres }} - Little to no Risk</button>
               </p>
+              <ng-template #elseBlock>
+                <p>No Data</p>
+              </ng-template>
             </td>
             <td>{{item.age}} Age, {{ item.dateOfBirth | date: "dd-MMM-yyyy" }}</td>
             <td>
