--- a/UIAngular/src/app/components/pages/patient-records/patient-record-list/patient-record-list.component.html
+++ b/UIAngular/src/app/components/pages/patient-records/patient-record-list/patient-record-list.component.html
@@ -68,9 +68,7 @@
                 fa-sort-amount-up':
                 ''}}"></span> Phone</th>
 
-            <th scope="col" class="cursor-pointer" (click)="onOrderByClick('dioptres')"> <span class="{{orderColumn.column == 'dioptres' ? orderColumn.order_by == 'DESC' ? 'fa fa-sort-amount-down':'fa
-                fa-sort-amount-up':
-                ''}}"></span> Dioptres (Latest)</th>
+            <th scope="col"> Dioptres (Latest)</th>
             <th scope="col" class="cursor-pointer" (click)="onOrderByClick('dateOfBirth')"> <span class="{{orderColumn.column == 'dateOfBirth' ? orderColumn.order_by == 'DESC' ? 'fa fa-sort-amount-down':'fa
                 fa-sort-amount-up':
                 ''}}"></span> Date Of Birth</th>
