Save font updated...

--- a/UIAngular/src/app/components/pages/Dioptres/Dioptres.component.html
+++ b/UIAngular/src/app/components/pages/Dioptres/Dioptres.component.html
@@ -44,7 +44,7 @@
       <div class="form-group mt-3 m-1">
         <button *ngIf="!isProcessing" type="button" class="btn-transition btn btn-sm btn-outline-success"
           [disabled]="frmTask.invalid" (click)="saveDioptre()">
-          <i class="fa fa-floppy-o" aria-hiddden="true"> Save</i>
+          <i class="fa fa-floppy-o" aria-hiddden="true"> </i> Save
         </button>
         <button *ngIf="isProcessing" class="btn btn-sm btn-outline-info" type="button" disabled>
           <span class="spinner-border text-danger spinner-border-sm" role="status" aria-hidden="true"></span>
