--- a/UIAngular/src/app/components/pages/patient-records/patient-record-add-edit/patient-record-add-edit.component.html
+++ b/UIAngular/src/app/components/pages/patient-records/patient-record-add-edit/patient-record-add-edit.component.html
@@ -78,7 +78,7 @@
       <div class="form-group mt-3 m-1">
         <button *ngIf="!isProcessing" type="button" class="btn btn-outline-success" [disabled]="frmTask.invalid"
           (click)="savePatientRecord()">
-          <i class="fa fa-floppy-o" aria-hiddden="true"> Save</i>
+          <i class="fa fa-floppy-o" aria-hiddden="true"> </i> Save
         </button>
         <button *ngIf="isProcessing" class="btn btn-outline-info" type="button" disabled>
           <span class="spinner-border text-danger spinner-border-sm" role="status" aria-hidden="true"></span>
