--- a/UIAngular/src/app/components/pages/Dioptres/Dioptres.component.html
+++ b/UIAngular/src/app/components/pages/Dioptres/Dioptres.component.html
@@ -9,7 +9,7 @@
 
   <div class="row">
     <div class="col-12 px-4 py-3">
-      <button (click)="viewCreateFormClick()" type="button" class="btn btn-sm btn-outline-secondary"> New
+      <button (click)="viewCreateFormClick()" type="button" class="btn btn-sm btn-outline-info"> New
         Dioptre</button>
     </div>
 
